--- a/OpenVRTest/StitchedSamples.cmp
+++ b/OpenVRTest/StitchedSamples.cmp
@@ -3,7 +3,7 @@
 155 177 124 	#Disk
 205 163 120		#Main veins
 217 203 76		#Auxilliary veins 
-0 0 255
-66 120 40		#Voronoi
+155 200 255
+155 177 124		#Voronoi
 231 149 48		#Ray
-1 1 1
+230 67 67		#Backwards veins
